attempt at fixing the annoying outline on mobile for the footer buttons

--- a/src/app/mobile-footer/mobile-footer.component.scss
+++ b/src/app/mobile-footer/mobile-footer.component.scss
@@ -19,5 +19,6 @@
         justify-content: center;
         align-items: center;
         background-color: rgb(252, 250, 248);
+        outline: none;
     }   
 }
